# leksah

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Contributing.md  Dockerfile  LICENSE.rtf  Main.hs  Preferences.hs  Readme  Readme.md  Setup.lhs  SetupLocale.lhs  appveyor.yml  cabal.project  cabal.project.gi-bindings  candy  default-reflex.nix  default.nix  ghf.cabal  ghf.cabal.ghc6.6  ghf.cabal.ghc6.8  leksah-nix.sh  leksah.bat  leksah.cabal  leksah.sh  lib.nix  nix-tools.nix  openGLDevelopment  release.nix  run-new-build.sh  shell.nix  sources.txt  stack.osx.yaml  stack.yaml
Ghf/: Core.hs  CoreGui.hs  Dialogs.hs  Editor.hs  Ghf.hs  Keymap.hs  Main.hs  Menu.hs  Package.hs  Preferences.hs  PreferencesBase.hs  Project.hs  SourceBeauty.hs  SourceCandy.hs  Statusbar.hs  View.hs
appveyor/: build-some.sh  cleanup-cache1.txt  cleanup-cache2.txt  cleanup-cache3.txt
bew/: Main.hs
codemirror/doc/: manual.html
config/: Default.candy  Default.keymap  Default.prefs  Emacs.keymap
data/: .gtkrc-2.0  Current.session  Default.candy  Default.keymap  Default.menu  Default.prefs  Module.template  candy-hasklig.lkshc  candy.lkshc  current.lkshs  emacs.lkshk  empty.lkshs  git.menu  keymap.lkshk  leksah.menu  main.lksht  module.lksht  prefs.lkshp  prefscoll.lkshp  svn.menu  testmain.lksht  welcome.txt
data/leksah-welcome/: .gitignore  LICENSE  cabal.project  leksah-welcome.cabal
data/leksah-welcome/src/: Main.hs
data/leksah-welcome/test/: Main.hs
data/styles/: arc.xml  github-dark.xml  github.xml  industrial.xml  leksah-dark.xml  leksah.xml
dialogs/: ghf-replace-dialog.glade
doc/: Todo.txt  analysis ghf.lyx  ghf_manual.lyx  leksah_manual.lyx
docs/: Makefile  appendix.rst  conf.py  configuration.rst  debugger.rst  editor.rst  helloworld.rst  index.rst  installing.rst  intro.rst  leksahproject.rst  make.bat  metadata.rst  modulebrowser.rst  packages.rst
docs/old_manual/: leksah_manual.lyx
docs/screenshots/: screenshot_buffer_menu.eps  screenshot_completion.eps  screenshot_config_menu.eps  screenshot_construct_module.eps  screenshot_debug_menu.eps  screenshot_debug_pane.eps  screenshot_edit_menu.eps  screenshot_error_pane.eps  screenshot_file_menu.eps  screenshot_findbar.eps  screenshot_first_start.eps  screenshot_grep.eps  screenshot_metadata_prefs.eps  screenshot_module_browser.eps  screenshot_package_editor_1.eps  screenshot_package_flags.eps  screenshot_package_menu.eps  screenshot_panes_menu.eps  screenshot_serach_pane.eps  screenshot_source_candy.eps  screenshot_view_menu.eps  screenshot_workspace_menu.eps
gtk/: adwaita.patch
keymap/: Default.keymap
language-specs/: cabal.lang  cassius.lang  hamlet.lang  haskell-literate.lang  haskell.lang  jmacro.lang  julius.lang  lucius.lang  nix.lang
linux/applications/: leksah.desktop  leksah.xml
linux/launch-leksah/: Info.plist
linux/specfiles/: binary_shared_0.8.spec  hslogger.spec  leksah.spec  leksah_server.spec  mingw-webkitgtk3.spec  process_leksah.spec  regex-base-0_1.93.1.spec  regex-tdfa-1.1.2.spec
main/: Collector.hs  LeksahEcho.hs  LeksahTrue.hs  Main.hs  WKWebView.hs  Warp.hs  WebKitGtk.hs
nix/: default.nix  hix.nix  lib.nix  sources.json
nix/overlays/: gtk-debug.nix
osx/: .gitignore  Current.session  Default.prefs  Info.plist  bundle.sh  gtk.sh  gtk2.sh  gtk2hs.modules  gtk2hsall.sh  gtkrc  launcher.sh  leksah.bundle  leksah.icns  makedmg.sh  makedmgs.sh  osxkeymap.lkshk  prefs.lkshp  run  settings.ini
pics/tango/actions/: Makefile.am  Makefile.in
pics/tango/apps/: Makefile.am  Makefile.in
pics/tango/categories/: Makefile.am  Makefile.in
pics/tango/devices/: Makefile.am  Makefile.in
pics/tango/emblems/: Makefile.am  Makefile.in
pics/tango/emotes/: Makefile.am  Makefile.in
pics/tango/mimetypes/: Makefile.am  Makefile.in
pics/tango/places/: Makefile.am  Makefile.in
pics/tango/status/: Makefile.am  Makefile.in
pins/: haskell-nix-src.json  iohk-nix-src.json  nixpkgs-src.json
po/: messages.pot  pt_BR.po
scripts/: clean.sh  gtk2hs.sh  stage.sh  updatedockerignore.sh
src/: DeepSeq.hs  Default.hs  LeksahEcho.hs  Main.hs  MyMissing.hs
src-gtk/IDE/: TextEditor.hs
src-gtk/IDE/Gtk/: Package.hs  Preferences.hs  SourceCandy.hs  State.hs  Types.hs  Workspaces.hs
src-gtk/IDE/Pane/: Breakpoints.hs  ClassHierarchy.hs  Log.hs  (+13 more)
src/Control/: Event.hs
src/GUI/: PropertyEditor.hs
src/Ghf/: BuildInfoEditor.hs  CallersPane.hs  Collector.hs  Collector.hs-boot  CollectorMain.hs  Completion.hs  Core.hs  DescriptionPP.hs  Extractor.hs  File.hs  FindPane.hs  FindPane.hs-boot  Ghf.hs  Info.hs  InfoPane.hs  InfoPane.hs-boot  InterfaceCollector.hs  InterfaceCollector.hs-boot  Keymap.hs  Log.hs  Log.hs-boot  Menu.hs  Menu.hs-boot  ModulesPane.hs  ModulesPane.hs-boot  Package.hs  PackageEditor.hs  PackageFlags.hs  Preferences.hs  PreferencesEditor.hs  PreferencesEditor.hs-boot  PrinterParser.hs  PropertyEditor.hs  Provider.hs  RecoverPanes.hs  SaveLayout.hs  SaveSession.hs  SourceCandy.hs  SourceCollector.hs  SourceEditor.hs  (+6 more)
src/IDE/: Brittany.hs  BufferMode.hs  Build.hs  BuildInfoEditor.hs  CallersPane.hs  Command.hs  Completion.hs  Debug.hs  DescriptionPP.hs  Exception.hs  FileUtils.hs  Find.hs  FindPane.hs  FindPane.hs-boot  GUIHistory.hs  HIE.hs  HLint.hs  HaRe.hs  HeaderParser.hs  ImportTool.hs  InfoPane.hs  InfoPane.hs-boot  Keymap.hs  LPaste.hs  Leksah.hs  LoadIfaceCadaver.hs  Log.hs  Log.hs-boot  LogRef.hs  Menu.hs  Menu.hs-boot  ModulesPane.hs  ModulesPane.hs-boot  NotebookFlipper.hs  OSX.hs  Package.hs  PackageEditor.hs  PackageFlags.hs  PaneGroups.hs  Preferences.hs  (+20 more)
tests/: TestTool.hs  Tests.hs
travis/: build.sh  vivid.Dockerfile  wily.Dockerfile  xenial.Dockerfile  zesty.Dockerfile
win32/: .gitignore  Environment.reg  Environment32.reg  gtk2hsall.sh  heat.xslt  leksah-rebuild-metadata.bat  leksah-server.bat  leksah.bat  leksah.nsi  leksah.wxs  makeinstaller.sh  makeinstallers.sh  recache.sh
xob/: Readme.md  Vagrantfile  setup.sh  vagrant-provision-reboot-plugin.rb
xobl/: Readme.md  Vagrantfile  partition1.sh  partition2.sh  setup.sh  vagrant-provision-reboot-plugin.rb
(+194 files in other folders)
