name: leksah
version: 0.12.1.3
cabal-version: >=1.10
build-type: Simple
license: GPL
license-file: LICENSE
copyright: 2007-2011 Juergen Nicklisch-Franken, Hamish Mackenzie
maintainer: maintainer@leksah.org
stability: provisional
homepage: http://www.leksah.org
package-url: http://code.haskell.org/leksah
bug-reports: http://code.google.com/p/leksah/issues/list
synopsis: Haskell IDE written in Haskell
description: An Integrated Development Environment for Haskell written in Haskell.
category: Development, IDE, Editor
author: Juergen Nicklisch-Franken, Hamish Mackenzie
tested-with: GHC == 7.2.2
data-files: LICENSE
            Readme

            data/current.lkshs
            data/candy.lkshc
            data/keymap.lkshk
            data/leksah.menu
            data/prefs.lkshp
            data/prefscoll.lkshp
            data/emacs.lkshk
            data/LICENSE
            data/main.lksht
            data/module.lksht
            data/welcome.txt
            data/leksah-welcome/Setup.lhs
            data/leksah-welcome/leksah-welcome.cabal
            data/leksah-welcome/src/Main.hs

            language-specs/haskell.lang
            language-specs/haskell-literate.lang
            language-specs/hamlet.lang
            language-specs/cassius.lang
            language-specs/lucius.lang
            language-specs/julius.lang

            pics/ide_class.png
            pics/ide_configure.png
            pics/ide_data.png
            pics/ide_error_next.png
            pics/ide_error_prev.png
            pics/ide_function.png
            pics/ide_instance.png
            pics/ide_konstructor.png
            pics/ide_make.png
            pics/ide_method.png
            pics/ide_newtype.png
            pics/ide_other.png
            pics/ide_reexported.png
            pics/ide_rule.png
            pics/ide_run.png
            pics/ide_slot.png
            pics/ide_source.png
            pics/ide_source_local.png
            pics/ide_type.png
            pics/leksah.png
            pics/ide_step.png
            pics/ide_local.png
            pics/ide_module.png
            pics/ide_continue.png
            pics/ide_debug.png
            pics/ide_clean.png
            pics/ide_build.png
            pics/ide_link.png
            pics/ide_rebuild_meta.png
            pics/ide_empty.png
data-dir: ""
extra-source-files: Setup.lhs
extra-tmp-files:

flag yi
    Default: False
    Description: Experimental Yi support

flag dyre
    Default: True
    Description: Experimental Yi support

flag threaded
    default: False
    description: Build with support for multithreaded execution

library
    if os(windows)
        build-depends: Win32 >=2.2.0.0 && <2.3
        extra-libraries: kernel32
--        extra-lib-dirs: C:/cygwin/lib/w32api
        includes: windows.h
--        include-dirs: C:/cygwin/usr/include/w32api
    else
        build-depends: unix >=2.3.1.0 && <2.6

    if os(osx)
        build-depends: gtk-mac-integration >= 0.0.0.2 && <0.2

    if flag(yi)
        build-depends: yi >=0.6.1 && <0.7
        cpp-options: -DLEKSAH_WITH_YI

    if flag(yi) && flag(dyre)
        build-depends: dyre >= 0.8.3 && <0.9
        cpp-options: -DLEKSAH_WITH_YI_DYRE

    if flag(threaded)
        ghc-options: -threaded

    hs-source-dirs: src
    default-language: Haskell98

    build-depends: Cabal >=1.6.0.1 && <1.15, base >=4.0.0.0 && <4.6, binary >=0.5.0.0 && <0.6,
                       bytestring >=0.9.0.1 && <0.10, containers >=0.2.0.0 && <0.5, directory >=1.0.0.2 && <3.1,
                       filepath >=1.1.0.1 && <1.4, glib >=0.10 && <0.13, gtk >=0.10 && <0.13,
                       gtksourceview2 >=0.10.0 && <0.13, mtl >=1.1.0.2 && <2.2, old-time >=1.0.0.1 && <1.2,
                       parsec >=2.1.0.1 && <3.2, pretty >=1.0.1.0 && <1.2,
                       regex-tdfa ==1.1.*, regex-base ==0.93.*, utf8-string >=0.3.1.1 && <0.4, array >=0.2.0.0 && <0.5,
                       time >=0.1 && <1.5, ltk >= 0.12.1.0 && <0.13, binary-shared >= 0.8 && <0.9, deepseq >= 1.1.0.0 && <1.4,
                       hslogger >= 1.0.7 && <1.2, leksah-server >=0.12.1.2 && <0.13, network >= 2.2 && <3.0,
                       ghc >=6.10.1 && <7.5, strict >= 0.3.2 && <0.4, enumerator >=0.4.14 && <0.5, text >= 0.11.1.5 && < 0.12,
                       gio >=0.12.2 && <0.13, transformers >=0.2.2.0 && <0.4,
                       QuickCheck >=2.4.2 && <2.5

    exposed-modules:
        IDE.Leksah IDE.Completion IDE.ImportTool
        IDE.Find IDE.Session IDE.Command IDE.Keymap IDE.Utils.GUIUtils IDE.SymbolNavigation
        IDE.Package IDE.YiConfig IDE.OSX
        IDE.GUIHistory IDE.SourceCandy IDE.NotebookFlipper
        IDE.Core.Types IDE.Core.State
        IDE.Metainfo.Provider
        IDE.Pane.Preferences IDE.Pane.PackageEditor
        IDE.Pane.Info IDE.Pane.Log IDE.Pane.SourceBuffer IDE.Pane.Modules
        IDE.Pane.Search IDE.Pane.PackageFlags
        IDE.LogRef IDE.Debug IDE.Pane.Grep IDE.Pane.Files
        IDE.Pane.Breakpoints IDE.Pane.Trace IDE.Pane.Variables
        IDE.Pane.Errors IDE.TextEditor IDE.Workspaces
        IDE.Statusbar IDE.Pane.Workspace IDE.PaneGroups
        IDE.Utils.ServerConnection
        IDE.BufferMode
        IDE.Build

    if (impl(ghc > 7))
        other-modules:
            Distribution.PackageDescription.PrettyPrintCopied
            Distribution.PackageDescription.ParseCopied

    if (impl(ghc >= 7.2))
        binary-shared >=0.8.2

    other-modules: Paths_leksah

    ghc-prof-options: -auto-all -prof
    ghc-shared-options: -auto-all
    ghc-options: -fwarn-missing-fields -fwarn-incomplete-patterns -ferror-spans

Executable leksah
    if os(windows)
        build-depends: Win32 >=2.2.0.0 && <2.3
        extra-libraries: kernel32
--        extra-lib-dirs: C:/cygwin/lib/w32api
        includes: windows.h
--        include-dirs: C:/cygwin/usr/include/w32api
    else
        build-depends: unix >=2.3.1.0 && <2.6

    if os(osx)
        build-depends: gtk-mac-integration >= 0.0.0.2 && <0.2

    if flag(yi)
        cpp-options: -DLEKSAH_WITH_YI

    if flag(yi) && flag(dyre)
        cpp-options: -DLEKSAH_WITH_DYRE

    if impl(ghc < 7.0) && flag(yi)
        build-depends: yi >=0.6.1 && <0.7

    if impl(ghc < 7.0) && flag(yi) && flag(dyre)
        build-depends: dyre >= 0.8.3 && <0.9

    if flag(threaded)
        ghc-options: -threaded

    if impl(ghc < 7.0)
        hs-source-dirs: src, main
        build-depends: Cabal >=1.6.0.1 && <1.15, base >=4.0.0.0 && <4.6, binary >=0.5.0.0 && <0.6,
                       bytestring >=0.9.0.1 && <0.10, containers >=0.2.0.0 && <0.5, directory >=1.0.0.2 && <3.1,
                       filepath >=1.1.0.1 && <1.4, glib >=0.10 && <0.13, gtk >=0.10 && <0.13,
                       gtksourceview2 >=0.10.0 && <0.13, mtl >=1.1.0.2 && <2.2, old-time >=1.0.0.1 && <1.2,
                       parsec >=2.1.0.1 && <3.2, pretty >=1.0.1.0 && <1.2,
                       regex-tdfa ==1.1.*, regex-base ==0.93.*, utf8-string >=0.3.1.1 && <0.4, array >=0.2.0.0 && <0.5,
                       time >=0.1 && <1.5, ltk >=0.12.1.0 && <0.13, binary-shared >= 0.8 && <0.9, deepseq >= 1.1.0.0 && <1.4,
                       hslogger >= 1.0.7 && <1.2, leksah-server >=0.12.1.2 && <0.13, network >= 2.2 && <3.0,
                       ghc >=6.10.1 && <7.5, strict >= 0.3.2 && <0.4, enumerator >=0.4.14 && <0.5, text >= 0.11.1.5 && < 0.12,
                       gio >=0.12.2 && <0.13, transformers >=0.2.2.0 && <0.4,
                       QuickCheck >=2.4.2 && <2.5
    else
        hs-source-dirs: main
        build-depends: leksah ==0.12.1.3, base >=4.0.0.0 && <= 5

    default-language: Haskell98
    main-is: Main.hs
    buildable: True
    ghc-prof-options: -auto-all -prof
    ghc-shared-options: -auto-all
    ghc-options:  -fwarn-missing-fields -fwarn-incomplete-patterns -ferror-spans

test-suite tests
    default-language: Haskell2010
    type:       exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:    Tests.hs
    build-depends: base >= 4.0.0.0 && <4.6, Cabal >=1.6.0.1 && <1.15, QuickCheck >=2.4.2 && <2.5,
                   leksah ==0.12.1.3




