name: leksah
version: 0.16.1.0
cabal-version: >=1.18
build-type: Simple
license: GPL
license-file: LICENSE
copyright: 2007-2016 Juergen Nicklisch-Franken, Hamish Mackenzie, Jacco Krijnen, JP Moresmau
maintainer: maintainer@leksah.org
stability: provisional
homepage: http://www.leksah.org
package-url: http://code.haskell.org/leksah
bug-reports: https://github.com/leksah/leksah/issues
synopsis: Haskell IDE written in Haskell
description:
    An Integrated Development Environment for Haskell written in Haskell.
category: Development, IDE, Editor
author: Juergen Nicklisch-Franken, Hamish Mackenzie, Jacco Krijnen, JP Moresmau
tested-with: GHC ==7.2.2
data-files:
    LICENSE
    Readme.md
    data/current.lkshs
    data/candy.lkshc
    data/candy-hasklig.lkshc
    data/keymap.lkshk
    data/leksah.menu
    data/svn.menu
    data/git.menu
    data/prefs.lkshp
    data/prefscoll.lkshp
    data/emacs.lkshk
    data/LICENSE
    data/main.lksht
    data/testmain.lksht
    data/module.lksht
    data/welcome.txt
    data/leksah-welcome/Setup.lhs
    data/leksah-welcome/leksah-welcome.cabal
    data/leksah-welcome/LICENSE
    data/leksah-welcome/src/Main.hs
    data/leksah-welcome/test/Main.hs
    data/empty.lkshs
    data/.gtkrc-2.0
    data/styles/leksah.xml
    data/styles/leksah-dark.xml
    language-specs/cabal.lang
    language-specs/haskell.lang
    language-specs/haskell-literate.lang
    language-specs/hamlet.lang
    language-specs/cassius.lang
    language-specs/lucius.lang
    language-specs/julius.lang
    language-specs/jmacro.lang
    pics/ide_folder.png
    pics/ide_source_folder.png
    pics/ide_component.png
    pics/ide_source_dependency.png
    pics/ide_package.png
    pics/ide_cabal_file.png
    pics/ide_class.png
    pics/ide_configure.png
    pics/ide_data.png
    pics/ide_error_next.png
    pics/ide_error_prev.png
    pics/ide_function.png
    pics/ide_instance.png
    pics/ide_konstructor.png
    pics/ide_make.png
    pics/ide_method.png
    pics/ide_newtype.png
    pics/ide_other.png
    pics/ide_reexported.png
    pics/ide_rule.png
    pics/ide_run.png
    pics/ide_slot.png
    pics/ide_source.png
    pics/ide_source_local.png
    pics/ide_type.png
    pics/leksah.png
    pics/ide_step.png
    pics/ide_local.png
    pics/ide_module.png
    pics/ide_continue.png
    pics/ide_debug.png
    pics/ide_clean.png
    pics/ide_build.png
    pics/ide_link.png
    pics/ide_rebuild_meta.png
    pics/ide_empty.png
    pics/ide_js.png
    pics/ide_error.png
    pics/ide_warning.png
    pics/ide_suggestion.png
    doc/Keybindings.svg
    doc/leksah_manual.lyx
    doc/screenshots2/screenshot_buffer_menu.png
    doc/screenshots2/screenshot_completion.png
    doc/screenshots2/screenshot_config_menu.png
    doc/screenshots2/screenshot_construct_module.png
    doc/screenshots2/screenshot_debug_menu.png
    doc/screenshots2/screenshot_debug_pane.png
    doc/screenshots2/screenshot_edit_menu.png
    doc/screenshots2/screenshot_error_pane.png
    doc/screenshots2/screenshot_file_menu.png
    doc/screenshots2/screenshot_findbar.png
    doc/screenshots2/screenshot_first_start.png
    doc/screenshots2/screenshot_grep.png
    doc/screenshots2/screenshot_help_menu.png
    doc/screenshots2/screenshot_metadata_prefs.png
    doc/screenshots2/screenshot_module_browser.png
    doc/screenshots2/screenshot_package_editor_1.png
    doc/screenshots2/screenshot_package_flags.png
    doc/screenshots2/screenshot_package_menu.png
    doc/screenshots2/screenshot_panes_menu.png
    doc/screenshots2/screenshot_prefs_editor.png
    doc/screenshots2/screenshot_serach_pane.png
    doc/screenshots2/screenshot_source_candy.png
    doc/screenshots2/screenshot_view_menu.png
    doc/screenshots2/screenshot_welcome.png
    doc/screenshots2/screenshot_workspace_menu.png
    scripts/clean.sh
    scripts/stage.sh
    osx/bundle.sh
    osx/gtk2.sh
    osx/gtk.sh
    osx/Info.plist
    osx/launcher.sh
    osx/leksah.bundle
    osx/leksah.icns
    osx/makedmg.sh
    osx/makedmgs.sh
    osx/osxkeymap.lkshk
    osx/settings.ini
    win32/gtk2hsall.sh
    win32/gtkrc
    win32/leksah.bat
    win32/leksah.ico
    win32/leksah.nsi
    win32/leksah-rebuild-metadata.bat
    win32/leksah-server.bat
    win32/makeinstaller.sh
    win32/makeinstallers.sh
    win32/recache.sh
    linux/applications/leksah.desktop
    linux/applications/leksah.xml
    linux/icons/hicolor/48x48/apps/leksah_48x48.png
    linux/specfiles/fedora/12/ghc-binary-shared.spec
    linux/specfiles/fedora/12/ghc-deepseq.spec
    linux/specfiles/fedora/12/ghc-hslogger.spec
    linux/specfiles/fedora/12/ghc-ltk.spec
    linux/specfiles/fedora/12/ghc-process-leksah.spec
    linux/specfiles/fedora/12/ghc-regex-base.spec
    linux/specfiles/fedora/12/ghc-regex-tdfa.spec
    linux/specfiles/fedora/12/leksah_server.spec
    linux/specfiles/fedora/12/leksah.spec
    linux/specfiles/fedora/13/ghc-binary-shared.spec
    linux/specfiles/fedora/13/ghc-hslogger.spec
    linux/specfiles/fedora/13/ghc-ltk.spec
    linux/specfiles/fedora/13/ghc-process-leksah.spec
    linux/specfiles/fedora/13/ghc-regex-tdfa.spec
    linux/specfiles/fedora/13/haddock.spec
    linux/specfiles/fedora/13/leksah-server.spec
    linux/specfiles/fedora/13/leksah.spec
    linux/specfiles/fedora/14/ghc-binary-shared.spec
    linux/specfiles/fedora/14/ghc-haddock.spec
    linux/specfiles/fedora/14/ghc-ltk.spec
    linux/specfiles/fedora/14/ghc-process-leksah.spec
    linux/specfiles/fedora/14/ghc-regex-tdfa.spec
    linux/specfiles/fedora/14/leksah-server.spec
    linux/specfiles/fedora/14/leksah.spec
    linux/specfiles/fedora/14/leksah.spec-darcs-backup0
    linux/specfiles/fedora/14/leksah.spec-darcs-backup1
extra-source-files:
    Setup.lhs
    SetupLocale.lhs
    po/*.pot
    po/*.po
x-gettext-po-files: po/*.po
x-gettext-domain-name: leksah

source-repository head
    type: git
    location: https://github.com/leksah/leksah

flag yi
    description:
        Experimental Yi support
    default: False

flag dyre
    description:
        Experimental Yi support

flag threaded
    description:
        Build with support for multithreaded execution

flag loc
    description:
        Experimental localization support
    default: False

flag network-uri
    description:
        Get Network.URI from the network-uri package

flag gtk-318
    description:
        GTK+ is 3.18 or later

flag gtk-320
    description:
        GTK+ is 3.20 or later

library

    if os(windows)
        build-depends:
            Win32 >=2.2.0.0 && <2.4
        extra-libraries:
            kernel32
    else
        build-depends:
            unix >=2.3.1.0 && <2.8

    if os(osx)
        build-depends:
            gi-gtkosxapplication >=2.0.2 && <2.1

    if flag(yi)
        build-depends:
            yi >=0.12.4 && <0.13,
            yi-language >=0.2.0 && <0.3,
            yi-rope >=0.7.0.1 && <0.8
        cpp-options: -DLEKSAH_WITH_YI

    if (flag(yi) && flag(dyre))
        build-depends:
            dyre >=0.8.3 && <0.9
        cpp-options: -DLEKSAH_WITH_YI_DYRE

    if (flag(loc) && os(linux))
        build-depends:
            hgettext -any,
            setlocale -any
        cpp-options: -DLOCALIZATION

    if flag(network-uri)
        build-depends:
            network-uri >=2.6 && <2.7,
            network >=2.6 && <2.7
    else
        build-depends:
            network >=2.2 && <2.6

    if impl(ghc >=7.2)
        build-depends:
            binary-shared >=0.8.2

    if flag(gtk-318)
        cpp-options: -DMIN_VERSION_GTK_3_18
        pkgconfig-depends: gtk+-3.0 >=3.18

    if flag(gtk-320)
        cpp-options: -DMIN_VERSION_GTK_3_20
        pkgconfig-depends: gtk+-3.0 >=3.20
    exposed-modules:
        IDE.HLint
        IDE.Leksah
        IDE.Completion
        IDE.ImportTool
        IDE.Find
        IDE.Session
        IDE.Command
        IDE.Keymap
        IDE.Utils.CabalUtils
        IDE.Utils.DirectoryUtils
        IDE.Utils.GUIUtils
        IDE.SymbolNavigation
        IDE.Package
        IDE.YiConfig
        IDE.OSX
        IDE.GUIHistory
        IDE.SourceCandy
        IDE.NotebookFlipper
        IDE.Core.Types
        IDE.Core.State
        IDE.Metainfo.Provider
        IDE.Pane.PackageEditor
        IDE.Pane.HLint
        IDE.Pane.Info
        IDE.Pane.Log
        IDE.Pane.SourceBuffer
        IDE.Pane.Modules
        IDE.Pane.Search
        IDE.Pane.PackageFlags
        IDE.LogRef
        IDE.Debug
        IDE.Pane.Grep
        IDE.Pane.Files
        IDE.Pane.Breakpoints
        IDE.Pane.Trace
        IDE.Pane.Variables
        IDE.Pane.Errors
        IDE.Preferences
        IDE.TextEditor
        IDE.Workspaces
        IDE.Workspaces.Writer
        IDE.Statusbar
        IDE.Pane.Workspace
        IDE.PaneGroups
        IDE.Utils.ServerConnection
        IDE.BufferMode
        IDE.Build
        IDE.Command.VCS
        IDE.Command.VCS.Common
        IDE.Command.VCS.SVN
        IDE.Command.VCS.GIT
        IDE.Command.VCS.Mercurial
        IDE.Command.VCS.Common.Workspaces
        IDE.Command.VCS.Common.GUI
        IDE.Command.VCS.Common.Helper
        IDE.Command.VCS.Types
        IDE.Command.Print
        IDE.Pane.WebKit.Documentation
        IDE.Pane.WebKit.Inspect
        IDE.Pane.WebKit.Output
        IDE.TextEditor.Class
        IDE.TextEditor.CodeMirror
        IDE.TextEditor.Yi
        IDE.TextEditor.GtkSourceView
        IDE.Utils.ExternalTool
    build-depends:
        base-compat >=0.9.0 && <0.10,
        haskell-gi-base >=0.18 && <0.19,
        gi-glib >=2.0.6 && <2.1,
        gi-gobject >=2.0.6 && <2.1,
        gi-gio >=2.0.6 && <2.1,
        gi-cairo >=1.0.6 && <1.1,
        gi-gdk >=3.0.6 && <3.1,
        gi-gdkpixbuf >=2.0.6 && <2.1,
        gi-gtk >=3.0.6 && <3.1,
        gi-pango >=1.0.6 && <1.1,
        gi-gtksource >=3.0.6 && <3.1,
        gi-webkit >=3.0.6 && <3.1,
        gi-javascriptcore >=3.0.6 && <3.1,
        gi-gtk-hs >=0.3.0.0 && <0.4,
        webkitgtk3-javascriptcore -any,
        jsaddle >=0.4.0.0 && <0.5,
        ghcjs-codemirror -any,
        blaze-html -any,
        lens -any,
        pretty-show >=1.6.3 && <1.7,
        Cabal >=1.24.0.0 && <1.25,
        base >=4.0.0.0 && <4.10,
        binary >=0.5.0.0 && <0.9,
        bytestring >=0.9.0.1 && <0.11,
        containers >=0.2.0.0 && <0.6,
        directory >=1.0.0.2 && <3.1,
        filepath >=1.1.0.1 && <1.5,
        mtl >=1.1.0.2 && <2.3,
        old-time >=1.0.0.1 && <1.2,
        parsec >=2.1.0.1 && <3.2,
        pretty >=1.0.1.0 && <1.2,
        regex-tdfa >=1.1 && <1.3,
        regex-tdfa-text -any,
        regex-base ==0.93.*,
        utf8-string >=0.3.1.1 && <1.1,
        array >=0.2.0.0 && <0.6,
        time >=0.1 && <1.7,
        ltk >=0.16.0.0 && <0.17,
        binary-shared >=0.8 && <0.9,
        deepseq >=1.1.0.0 && <1.5,
        hslogger >=1.0.7 && <1.3,
        leksah-server >=0.16.0.0 && <0.17,
        ghc >=6.10.1 && <8.1,
        strict >=0.3.2 && <0.4,
        conduit >=1.0.8 && <1.3,
        text >=0.11.1.5 && <1.3,
        transformers >=0.2.2.0 && <0.6,
        executable-path >=0.0.3 && <0.1,
        vcsgui >=0.2.0 && <0.3,
        vcswrapper >=0.1.0 && <0.2,
        QuickCheck >=2.4.2 && <2.9,
        haskell-src-exts >=1.13.5 && <1.18,
        hlint >=1.9.21 && <1.10,
        vado >=0.0.1 && <0.1,
        shakespeare >=2.0.0.1 && <2.1,
        cpphs >=1.19 && <1.21,
        stm >=2.4.4 && <2.5
    cpp-options: -DLEKSAH_WITH_CODE_MIRROR
    default-language: Haskell2010
    default-extensions: ViewPatterns
    hs-source-dirs: src
    other-modules:
        Paths_leksah
    ghc-options: -fwarn-missing-fields -fwarn-incomplete-patterns -ferror-spans

executable leksah

    if os(windows)
        build-depends:
            Win32 >=2.2.0.0 && <2.4
        extra-libraries:
            kernel32

    if flag(yi)
        cpp-options: -DLEKSAH_WITH_YI

    if (flag(yi) && flag(dyre))
        cpp-options: -DLEKSAH_WITH_DYRE

    if flag(threaded)
        ghc-options: -threaded

    if (os(linux) && flag(loc))
        build-depends:
            hgettext -any,
            setlocale -any
        cpp-options: -DLOCALIZATION

    if os(osx)
        ghc-options: -optl-headerpad_max_install_names
    main-is: Main.hs
    build-depends:
        leksah ==0.16.1.0,
        base >=4.0.0.0 && <=4.10,
        gi-gtk-hs >=0.3.0.0 && <0.4,
        stm >=2.4.4 && <2.5
    default-language: Haskell2010
    hs-source-dirs: main
    ghc-options: -rtsopts -fwarn-missing-fields -fwarn-incomplete-patterns -ferror-spans

executable bewleksah
    main-is: Main.hs
    build-depends:
        leksah ==0.16.1.0,
        base >=4.0.0.0 && <=4.10,
        jsaddle -any,
        ghcjs-dom >=0.3.0.0 && <0.4,
        gi-gtk-hs >=0.3.0.0 && <0.4,
        gi-gtksource >=3.0.2 && <3.1,
        gi-webkit >=3.0.2 && <3.1,
        webkitgtk3-javascriptcore -any,
        stm >=2.4.4 && <2.5
    default-language: Haskell2010
    hs-source-dirs: bew

test-suite tests

    if flag(yi)
        build-depends:
            yi -any
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    build-depends:
        base >=4.0.0.0 && <4.10,
        Cabal >=1.24.0.0 && <1.25,
        QuickCheck >=2.4.2 && <2.9,
        leksah ==0.16.1.0,
        containers -any,
        ltk -any,
        leksah-server -any,
        hslogger -any,
        transformers -any,
        monad-loops -any,
        text -any,
        gi-glib >=2.0.2 && <2.1,
        gi-gtksource >=3.0.2 && <3.1,
        gi-webkit >=3.0.2 && <3.1,
        gi-gtk-hs >=0.3.0.0 && <0.4,
        stm >=2.4.4 && <2.5
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        IDE.TextEditor.Tests
    ghc-options: -threaded
